Fixed spacing between elements

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,9 @@
 .contact {
   height:435px;
   display:flex;
-  justify-content: center;
+  padding:60px 0 60px 0;
+  box-sizing: border-box;
+  justify-content: space-between;
   flex-direction: column;
 }
 
